--- a/Form4/index.html
+++ b/Form4/index.html
@@ -6,24 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h3><u>Enter your info</u></h3>
-    <h4>Name</h4>
-      <form>
-     <input type="Text" name="user">
-     <h4>Age</h4>
-     <input type="age">
-     <h4>ID</h4>
-     <input type="id">
-     <h4>Email</h4>
-     <input type="email">
-     <h4>Your Bio</h4>
-     <textarea cols="30" rows="5"></textarea> <br> <br>
-     <input type="button" value="Submit" width="40px" height="20px">
-
-
-
-
-
-      </form>
+ <h3><u>Enter your info</u></h3>
+ <H4>Name</H4>
+ <input type="text" name="giorgi" size="25">
+ <h4>Age</h4>
+ <input type="number" name="Age" size="25">
+ <h4>Birthday</h4>
+ <input type="date" name="Birthday" >
+ <h4>ID</h4>
+ <input type="text" name="ID" size="25">
+ <h4>Email</h4>
+ <input type="email" name="email" >
+ <h4>Your bio</h4>
+ <textarea name=""  cols="25" rows="5"></textarea> <br> <br>
+ <input type="button" value="Submit">
 </body>
 </html>
